{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 74,
  "lineage": "73587677-b8af-88d9-bd28-16101efb04dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0cbca1aa2a24ce2a1",
            "arn": "arn:aws:ec2:us-east-1:517798688687:instance/i-0cab69d9b592f8fb7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cab69d9b592f8fb7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-038ae87e0e340db46"
              }
            ],
            "primary_network_interface_id": "eni-038ae87e0e340db46",
            "private_dns": "ip-10-0-1-117.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.117",
            "public_dns": "ec2-98-80-168-27.compute-1.amazonaws.com",
            "public_ip": "98.80.168.27",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059ce8d9a33351756",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb303c934d2ddba5",
            "tags": {
              "BillingCode": "258514",
              "Company": "Globaltech",
              "Environment": "dev",
              "Name": "NextLevel-dev",
              "Project": "NextLevel"
            },
            "tags_all": {
              "BillingCode": "258514",
              "Company": "Globaltech",
              "Environment": "dev",
              "Name": "NextLevel-dev",
              "Project": "NextLevel"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-05a3aabe535e1c9d8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517798688687",
            "id": "i-0cab69d9b592f8fb7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.app-vpc",
            "aws_security_group.app-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.app-vpc",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517798688687:internet-gateway/igw-09d86841ad7cd8d23",
            "id": "igw-09d86841ad7cd8d23",
            "owner_id": "517798688687",
            "region": "us-east-1",
            "tags": {
              "BillingCode": "258514",
              "Company": "Globaltech",
              "Environment": "dev",
              "Project": "NextLevel"
            },
            "tags_all": {
              "BillingCode": "258514",
              "Company": "Globaltech",
              "Environment": "dev",
              "Project": "NextLevel"
            },
            "vpc_id": "vpc-0967c47ac619f54a5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517798688687",
            "id": "igw-09d86841ad7cd8d23",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517798688687:route-table/rtb-0e60fcf03808c8792",
            "id": "rtb-0e60fcf03808c8792",
            "owner_id": "517798688687",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d86841ad7cd8d23",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BillingCode": "258514",
              "Company": "Globaltech",
              "Environment": "dev",
              "Project": "NextLevel"
            },
            "tags_all": {
              "BillingCode": "258514",
              "Company": "Globaltech",
              "Environment": "dev",
              "Project": "NextLevel"
            },
            "timeouts": null,
            "vpc_id": "vpc-0967c47ac619f54a5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517798688687",
            "id": "rtb-0e60fcf03808c8792",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.app-vpc",
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033872672601c7ddc",
            "region": "us-east-1",
            "route_table_id": "rtb-0e60fcf03808c8792",
            "subnet_id": "subnet-0fb303c934d2ddba5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517798688687",
            "id": "rtbassoc-033872672601c7ddc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.app-vpc",
            "aws_route_table.app-vpc",
            "aws_subnet.public-subnet",
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517798688687:security-group/sg-05a3aabe535e1c9d8",
            "description": "instance firewall",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a3aabe535e1c9d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "517798688687",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "258514",
              "Company": "Globaltech",
              "Environment": "dev",
              "Project": "NextLevel"
            },
            "tags_all": {
              "BillingCode": "258514",
              "Company": "Globaltech",
              "Environment": "dev",
              "Project": "NextLevel"
            },
            "timeouts": null,
            "vpc_id": "vpc-0967c47ac619f54a5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517798688687",
            "id": "sg-05a3aabe535e1c9d8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517798688687:subnet/subnet-0fb303c934d2ddba5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb303c934d2ddba5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "517798688687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "BillingCode": "258514",
              "Company": "Globaltech",
              "Environment": "dev",
              "Project": "NextLevel"
            },
            "tags_all": {
              "BillingCode": "258514",
              "Company": "Globaltech",
              "Environment": "dev",
              "Project": "NextLevel"
            },
            "vpc_id": "vpc-0967c47ac619f54a5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517798688687",
            "id": "subnet-0fb303c934d2ddba5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517798688687:vpc/vpc-0967c47ac619f54a5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce8f6dc32c24f4b3",
            "default_route_table_id": "rtb-02960d71835ce2390",
            "default_security_group_id": "sg-00733de1f8e18f91c",
            "dhcp_options_id": "dopt-064c320fd631745ba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0967c47ac619f54a5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02960d71835ce2390",
            "owner_id": "517798688687",
            "region": "us-east-1",
            "tags": {
              "BillingCode": "258514",
              "Company": "Globaltech",
              "Environment": "dev",
              "Project": "NextLevel"
            },
            "tags_all": {
              "BillingCode": "258514",
              "Company": "Globaltech",
              "Environment": "dev",
              "Project": "NextLevel"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517798688687",
            "id": "vpc-0967c47ac619f54a5",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517798688687:security-group-rule/sgr-067059122b8164c3a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-067059122b8164c3a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05a3aabe535e1c9d8",
            "security_group_rule_id": "sgr-067059122b8164c3a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517798688687",
            "id": "sgr-067059122b8164c3a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app-sg",
            "aws_vpc.app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517798688687:security-group-rule/sgr-03f8f2ab3f9488728",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03f8f2ab3f9488728",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05a3aabe535e1c9d8",
            "security_group_rule_id": "sgr-03f8f2ab3f9488728",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "517798688687",
            "id": "sgr-03f8f2ab3f9488728",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app-sg",
            "aws_vpc.app-vpc"
          ]
        }
      ]
    }
  ]
}